refactor: 使用java17语法